# academic-testing

cpp/: CMakeLists.txt
cpp/results/: scores.txt
cpp/src/: main.cpp
